added dataset and viewed

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2,8 +2,545 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be7b386e-a07a-4932-8011-866457476d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2d8c42ef-ca36-44dd-bed1-fb0d93fe69df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_x = pd.read_csv('adult_processed_x.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "49b47dad-e1cf-44fc-8165-5e47f7d9a007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_y= pd.read_csv('adult_processed_y.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b462eb23-984e-4171-a4a0-b80a7ffa7bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education.num</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital.gain</th>\n",
+       "      <th>capital.loss</th>\n",
+       "      <th>hours.per.week</th>\n",
+       "      <th>Federal-gov</th>\n",
+       "      <th>Local-gov</th>\n",
+       "      <th>Never-worked</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Farming-fishing</th>\n",
+       "      <th>Handlers-cleaners</th>\n",
+       "      <th>Machine-op-inspct</th>\n",
+       "      <th>Other-service</th>\n",
+       "      <th>Priv-house-serv</th>\n",
+       "      <th>Prof-specialty</th>\n",
+       "      <th>Protective-serv</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Tech-support</th>\n",
+       "      <th>Transport-moving</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.043987</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.890411</td>\n",
+       "      <td>0.081896</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.173469</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.671233</td>\n",
+       "      <td>0.118021</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.506849</td>\n",
+       "      <td>0.086982</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.895317</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.328767</td>\n",
+       "      <td>0.171404</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.895317</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>0.068493</td>\n",
+       "      <td>0.202298</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>0.136986</td>\n",
+       "      <td>0.166404</td>\n",
+       "      <td>0.733333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.377551</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>0.315068</td>\n",
+       "      <td>0.096500</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>0.561644</td>\n",
+       "      <td>0.094827</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.397959</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>0.068493</td>\n",
+       "      <td>0.128499</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.193878</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32561 rows × 88 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            age    fnlwgt  education.num  sex  capital.gain  capital.loss  \\\n",
+       "0      1.000000  0.043987       0.533333  0.0           0.0      1.000000   \n",
+       "1      0.890411  0.081896       0.533333  0.0           0.0      1.000000   \n",
+       "2      0.671233  0.118021       0.600000  0.0           0.0      1.000000   \n",
+       "3      0.506849  0.086982       0.200000  0.0           0.0      0.895317   \n",
+       "4      0.328767  0.171404       0.600000  0.0           0.0      0.895317   \n",
+       "...         ...       ...            ...  ...           ...           ...   \n",
+       "32556  0.068493  0.202298       0.600000  1.0           0.0      0.000000   \n",
+       "32557  0.136986  0.166404       0.733333  0.0           0.0      0.000000   \n",
+       "32558  0.315068  0.096500       0.533333  1.0           0.0      0.000000   \n",
+       "32559  0.561644  0.094827       0.533333  0.0           0.0      0.000000   \n",
+       "32560  0.068493  0.128499       0.533333  1.0           0.0      0.000000   \n",
+       "\n",
+       "       hours.per.week  Federal-gov  Local-gov  Never-worked  ...  \\\n",
+       "0            0.397959          0.0        0.0           0.0  ...   \n",
+       "1            0.173469          0.0        0.0           0.0  ...   \n",
+       "2            0.397959          0.0        0.0           0.0  ...   \n",
+       "3            0.397959          0.0        0.0           0.0  ...   \n",
+       "4            0.397959          0.0        0.0           0.0  ...   \n",
+       "...               ...          ...        ...           ...  ...   \n",
+       "32556        0.397959          0.0        0.0           0.0  ...   \n",
+       "32557        0.377551          0.0        0.0           0.0  ...   \n",
+       "32558        0.397959          0.0        0.0           0.0  ...   \n",
+       "32559        0.397959          0.0        0.0           0.0  ...   \n",
+       "32560        0.193878          0.0        0.0           0.0  ...   \n",
+       "\n",
+       "       Farming-fishing  Handlers-cleaners  Machine-op-inspct  Other-service  \\\n",
+       "0                  0.0                0.0                0.0            0.0   \n",
+       "1                  0.0                0.0                0.0            0.0   \n",
+       "2                  0.0                0.0                0.0            0.0   \n",
+       "3                  0.0                0.0                1.0            0.0   \n",
+       "4                  0.0                0.0                0.0            0.0   \n",
+       "...                ...                ...                ...            ...   \n",
+       "32556              0.0                0.0                0.0            0.0   \n",
+       "32557              0.0                0.0                0.0            0.0   \n",
+       "32558              0.0                0.0                1.0            0.0   \n",
+       "32559              0.0                0.0                0.0            0.0   \n",
+       "32560              0.0                0.0                0.0            0.0   \n",
+       "\n",
+       "       Priv-house-serv  Prof-specialty  Protective-serv  Sales  Tech-support  \\\n",
+       "0                  0.0             0.0              0.0    0.0           0.0   \n",
+       "1                  0.0             0.0              0.0    0.0           0.0   \n",
+       "2                  0.0             0.0              0.0    0.0           0.0   \n",
+       "3                  0.0             0.0              0.0    0.0           0.0   \n",
+       "4                  0.0             1.0              0.0    0.0           0.0   \n",
+       "...                ...             ...              ...    ...           ...   \n",
+       "32556              0.0             0.0              1.0    0.0           0.0   \n",
+       "32557              0.0             0.0              0.0    0.0           1.0   \n",
+       "32558              0.0             0.0              0.0    0.0           0.0   \n",
+       "32559              0.0             0.0              0.0    0.0           0.0   \n",
+       "32560              0.0             0.0              0.0    0.0           0.0   \n",
+       "\n",
+       "       Transport-moving  \n",
+       "0                   0.0  \n",
+       "1                   0.0  \n",
+       "2                   0.0  \n",
+       "3                   0.0  \n",
+       "4                   0.0  \n",
+       "...                 ...  \n",
+       "32556               0.0  \n",
+       "32557               0.0  \n",
+       "32558               0.0  \n",
+       "32559               0.0  \n",
+       "32560               0.0  \n",
+       "\n",
+       "[32561 rows x 88 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "af761166-7699-4e10-928d-257579535c42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income_larger_than_50k</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32561 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       income_larger_than_50k\n",
+       "0                           0\n",
+       "1                           0\n",
+       "2                           0\n",
+       "3                           0\n",
+       "4                           0\n",
+       "...                       ...\n",
+       "32556                       0\n",
+       "32557                       0\n",
+       "32558                       1\n",
+       "32559                       0\n",
+       "32560                       0\n",
+       "\n",
+       "[32561 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c51110a-1b75-4925-9681-acb437e03137",
    "metadata": {},
    "outputs": [],
    "source": []
