--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split "
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
