--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2,19 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "be7b386e-a07a-4932-8011-866457476d1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np \n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "#visualization libraries\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "#preprocessing\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "#Checking Z value for outlier treatment\n",
+    "from scipy import stats\n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "#splitting the dataset into training and testing. 60:20:20 \n",
+    "# 60% for training, 20% for validation and 20% for testing.\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#picking models for prediction.\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "#ensemble models for better performance\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "#error evaluation\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "2d8c42ef-ca36-44dd-bed1-fb0d93fe69df",
    "metadata": {},
    "outputs": [],
@@ -24,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "49b47dad-e1cf-44fc-8165-5e47f7d9a007",
    "metadata": {},
    "outputs": [],
@@ -34,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b462eb23-984e-4171-a4a0-b80a7ffa7bb8",
+   "execution_count": 43,
+   "id": "caab24b7-9453-49b9-a7fb-4614f967d08d",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +450,7 @@
        "[32561 rows x 88 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "af761166-7699-4e10-928d-257579535c42",
+   "execution_count": 44,
+   "id": "fe7baedb-7d03-4c29-a362-8898ea8605ed",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +556,7 @@
        "[32561 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,8 +567,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "e468f1e1-4953-47a0-8601-00c82b9dc00e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 88 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   age                         32561 non-null  float64\n",
+      " 1   fnlwgt                      32561 non-null  float64\n",
+      " 2   education.num               32561 non-null  float64\n",
+      " 3   sex                         32561 non-null  float64\n",
+      " 4   capital.gain                32561 non-null  float64\n",
+      " 5   capital.loss                32561 non-null  float64\n",
+      " 6   hours.per.week              32561 non-null  float64\n",
+      " 7   Federal-gov                 32561 non-null  float64\n",
+      " 8   Local-gov                   32561 non-null  float64\n",
+      " 9   Never-worked                32561 non-null  float64\n",
+      " 10  Private                     32561 non-null  float64\n",
+      " 11  Self-emp-inc                32561 non-null  float64\n",
+      " 12  Self-emp-not-inc            32561 non-null  float64\n",
+      " 13  State-gov                   32561 non-null  float64\n",
+      " 14  Without-pay                 32561 non-null  float64\n",
+      " 15  Divorced                    32561 non-null  float64\n",
+      " 16  Married-AF-spouse           32561 non-null  float64\n",
+      " 17  Married-civ-spouse          32561 non-null  float64\n",
+      " 18  Married-spouse-absent       32561 non-null  float64\n",
+      " 19  Never-married               32561 non-null  float64\n",
+      " 20  Separated                   32561 non-null  float64\n",
+      " 21  Widowed                     32561 non-null  float64\n",
+      " 22  Husband                     32561 non-null  float64\n",
+      " 23  Not-in-family               32561 non-null  float64\n",
+      " 24  Other-relative              32561 non-null  float64\n",
+      " 25  Own-child                   32561 non-null  float64\n",
+      " 26  Unmarried                   32561 non-null  float64\n",
+      " 27  Wife                        32561 non-null  float64\n",
+      " 28  Amer-Indian-Eskimo          32561 non-null  float64\n",
+      " 29  Asian-Pac-Islander          32561 non-null  float64\n",
+      " 30  Black                       32561 non-null  float64\n",
+      " 31  Other                       32561 non-null  float64\n",
+      " 32  White                       32561 non-null  float64\n",
+      " 33  Cambodia                    32561 non-null  float64\n",
+      " 34  Canada                      32561 non-null  float64\n",
+      " 35  China                       32561 non-null  float64\n",
+      " 36  Columbia                    32561 non-null  float64\n",
+      " 37  Cuba                        32561 non-null  float64\n",
+      " 38  Dominican-Republic          32561 non-null  float64\n",
+      " 39  Ecuador                     32561 non-null  float64\n",
+      " 40  El-Salvador                 32561 non-null  float64\n",
+      " 41  England                     32561 non-null  float64\n",
+      " 42  France                      32561 non-null  float64\n",
+      " 43  Germany                     32561 non-null  float64\n",
+      " 44  Greece                      32561 non-null  float64\n",
+      " 45  Guatemala                   32561 non-null  float64\n",
+      " 46  Haiti                       32561 non-null  float64\n",
+      " 47  Holand-Netherlands          32561 non-null  float64\n",
+      " 48  Honduras                    32561 non-null  float64\n",
+      " 49  Hong                        32561 non-null  float64\n",
+      " 50  Hungary                     32561 non-null  float64\n",
+      " 51  India                       32561 non-null  float64\n",
+      " 52  Iran                        32561 non-null  float64\n",
+      " 53  Ireland                     32561 non-null  float64\n",
+      " 54  Italy                       32561 non-null  float64\n",
+      " 55  Jamaica                     32561 non-null  float64\n",
+      " 56  Japan                       32561 non-null  float64\n",
+      " 57  Laos                        32561 non-null  float64\n",
+      " 58  Mexico                      32561 non-null  float64\n",
+      " 59  Nicaragua                   32561 non-null  float64\n",
+      " 60  Outlying-US(Guam-USVI-etc)  32561 non-null  float64\n",
+      " 61  Peru                        32561 non-null  float64\n",
+      " 62  Philippines                 32561 non-null  float64\n",
+      " 63  Poland                      32561 non-null  float64\n",
+      " 64  Portugal                    32561 non-null  float64\n",
+      " 65  Puerto-Rico                 32561 non-null  float64\n",
+      " 66  Scotland                    32561 non-null  float64\n",
+      " 67  South                       32561 non-null  float64\n",
+      " 68  Taiwan                      32561 non-null  float64\n",
+      " 69  Thailand                    32561 non-null  float64\n",
+      " 70  Trinadad&Tobago             32561 non-null  float64\n",
+      " 71  United-States               32561 non-null  float64\n",
+      " 72  Vietnam                     32561 non-null  float64\n",
+      " 73  Yugoslavia                  32561 non-null  float64\n",
+      " 74  Adm-clerical                32561 non-null  float64\n",
+      " 75  Armed-Forces                32561 non-null  float64\n",
+      " 76  Craft-repair                32561 non-null  float64\n",
+      " 77  Exec-managerial             32561 non-null  float64\n",
+      " 78  Farming-fishing             32561 non-null  float64\n",
+      " 79  Handlers-cleaners           32561 non-null  float64\n",
+      " 80  Machine-op-inspct           32561 non-null  float64\n",
+      " 81  Other-service               32561 non-null  float64\n",
+      " 82  Priv-house-serv             32561 non-null  float64\n",
+      " 83  Prof-specialty              32561 non-null  float64\n",
+      " 84  Protective-serv             32561 non-null  float64\n",
+      " 85  Sales                       32561 non-null  float64\n",
+      " 86  Tech-support                32561 non-null  float64\n",
+      " 87  Transport-moving            32561 non-null  float64\n",
+      "dtypes: float64(88)\n",
+      "memory usage: 21.9 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_x.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "76905215-186f-4d8d-b5c1-eb245b325e38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column                  Non-Null Count  Dtype\n",
+      "---  ------                  --------------  -----\n",
+      " 0   income_larger_than_50k  32561 non-null  int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 254.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_y.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a5b577eb-f705-4059-a021-33984ca56d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "col_names: ['age', 'fnlwgt', 'education.num', 'sex', 'capital.gain', 'capital.loss', 'hours.per.week', 'Federal-gov', 'Local-gov', 'Never-worked', 'Private', 'Self-emp-inc', 'Self-emp-not-inc', 'State-gov', 'Without-pay', 'Divorced', 'Married-AF-spouse', 'Married-civ-spouse', 'Married-spouse-absent', 'Never-married', 'Separated', 'Widowed', 'Husband', 'Not-in-family', 'Other-relative', 'Own-child', 'Unmarried', 'Wife', 'Amer-Indian-Eskimo', 'Asian-Pac-Islander', 'Black', 'Other', 'White', 'Cambodia', 'Canada', 'China', 'Columbia', 'Cuba', 'Dominican-Republic', 'Ecuador', 'El-Salvador', 'England', 'France', 'Germany', 'Greece', 'Guatemala', 'Haiti', 'Holand-Netherlands', 'Honduras', 'Hong', 'Hungary', 'India', 'Iran', 'Ireland', 'Italy', 'Jamaica', 'Japan', 'Laos', 'Mexico', 'Nicaragua', 'Outlying-US(Guam-USVI-etc)', 'Peru', 'Philippines', 'Poland', 'Portugal', 'Puerto-Rico', 'Scotland', 'South', 'Taiwan', 'Thailand', 'Trinadad&Tobago', 'United-States', 'Vietnam', 'Yugoslavia', 'Adm-clerical', 'Armed-Forces', 'Craft-repair', 'Exec-managerial', 'Farming-fishing', 'Handlers-cleaners', 'Machine-op-inspct', 'Other-service', 'Priv-house-serv', 'Prof-specialty', 'Protective-serv', 'Sales', 'Tech-support', 'Transport-moving'] \n",
+      "\n",
+      "length: 88\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_names_data_x=list(data_x.columns)\n",
+    "print('col_names: {} \\n\\nlength: {}'.format(col_names_data_x, len(col_names_data_x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "06cc9df6-b816-4331-94f4-22e19b9edefb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "col_names: ['income_larger_than_50k'] \n",
+      "\n",
+      "length: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_names_data_y=list(data_y.columns)\n",
+    "print('col_names: {} \\n\\nlength: {}'.format(col_names_data_y, len(col_names_data_y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c51110a-1b75-4925-9681-acb437e03137",
+   "id": "7b71ff2d-7bae-4cc7-9319-4e58cf6a3685",
    "metadata": {},
    "outputs": [],
    "source": []
