--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "id": "374847bb-dcb6-4b6e-aad3-547ac3387c5e",
    "metadata": {},
    "outputs": [
@@ -1799,9 +1799,7 @@
     }
    ],
    "source": [
-    "#this part should be rewritten with our assignment\n",
-    "\n",
-    "\n",
+    "#this part should be rewritten with our assignment, since i used pandas, but our assignments are using numpy\n",
     "\n",
     "log_reg = LogisticRegression(penalty = 'l2', dual = False, tol = 1e-4, fit_intercept = True, \n",
     "                            solver = 'liblinear')\n",
